第一次提交基本框架

--- a/数据库.md
+++ b/数据库.md
@@ -121,27 +121,27 @@ user:暂时（找不到）东西
 
 pgtest:直接复制(得出结果采用insert)
 
-notice：外部用page列出来，里面先获取id在用index进行下一篇(无上一篇，有时间可实现)
+罗：notice：外部用page列出来，里面先获取id在用index进行下一篇(无上一篇，有时间可实现)
 
-leacot：留言列表(list)+用户留言(insert)
+mc:leacot：留言列表(list)+用户留言(insert)
 
 index:用户首页
 
-article:外部用page列出来，里面先获取id在用index进行下一篇(无上一篇，有时间可实现)
+水：article:外部用page列出来，里面先获取id在用index进行下一篇(无上一篇，有时间可实现)
 
 
 
 ## 管理员：
 
-user:增删查改+重置密码（改那里无密码，无增加方法）
+水：user:增删查改+重置密码（改那里无密码，无增加方法）
 
-updatepassword：改密码，可按照原本单独改，也可直接放在上面user一起改
+水：updatepassword：改密码，可按照原本单独改，也可直接放在上面user一起改
 
 topic：增删查改
 
-pgtest（测评记录）:查和删
+罗：pgtest（测评记录）:查和删
 
-notice:增删查改
+mc:notice:增删查改
 
 leacot(后台留言):查删改（增在用户端留言实现）
 
